<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".livestatus.LiveStationActivity">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/rv_toolbar"
            style="@style/MyThemeOverlay_Toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/live_station"
            app:titleCentered="true">


        </com.google.android.material.appbar.MaterialToolbar>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/rv_toolbar">


            <TextView
                android:id="@+id/btngetdetails"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/btn_boarding_point"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:stateListAnimator="@animator/card_down_animation"
                android:text="@string/get_details"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sdp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cv_date" />


            <View
                android:id="@+id/ellipse_37"
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_marginStart="@dimen/_40sdp"
                android:layout_marginTop="12dp"
                android:background="@drawable/circle_shape"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/view2"
                android:layout_width="@dimen/_2sdp"
                android:layout_height="@dimen/_200sdp"
                android:background="@drawable/line_vertical"
                android:backgroundTint="#22242B"
                app:layout_constraintLeft_toLeftOf="@id/ellipse_37"
                app:layout_constraintRight_toRightOf="@id/ellipse_37"
                app:layout_constraintTop_toBottomOf="@id/ellipse_37" />


            <View
                android:id="@+id/ellipse_38"
                android:layout_width="@dimen/_12sdp"
                android:layout_height="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_40sdp"
                android:background="@drawable/circle_shape"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <View
                android:id="@+id/view3"
                android:layout_width="@dimen/_2sdp"
                android:layout_height="@dimen/_200sdp"
                android:background="@drawable/line_vertical"
                android:backgroundTint="#22242B"
                app:layout_constraintLeft_toLeftOf="@id/ellipse_38"
                app:layout_constraintRight_toRightOf="@id/ellipse_38"
                app:layout_constraintTop_toBottomOf="@id/ellipse_38" />

            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/_260sdp"
                android:layout_height="@dimen/_130sdp"
                android:layout_marginTop="@dimen/_50sdp"
                android:shadowColor="#1A00001A"
                app:cardBackgroundColor="#FFFFFF"
                app:cardCornerRadius="@dimen/_15sdp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <View
                        android:id="@+id/v_horizontal"
                        android:layout_width="0dp"
                        android:layout_height="5dp"
                        android:background="@drawable/horizontal_line"
                        android:layerType="software"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="@id/tv_from"
                        app:layout_constraintRight_toLeftOf="@id/swip"
                        app:layout_constraintTop_toTopOf="parent" />


                    <TextView
                        android:id="@+id/tv_from"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/form"
                        android:textColor="#868383"
                        android:textSize="@dimen/_12sdp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/etfrom"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:background="@android:color/transparent"
                        android:clickable="false"
                        android:cursorVisible="false"
                        android:focusable="true"
                        android:focusableInTouchMode="false"
                        android:fontFamily="@font/poppins_medium"
                        android:hint="@string/where_from"
                        android:longClickable="false"
                        android:textColor="#22242B"
                        android:textSize="@dimen/_12sdp"
                        app:layout_constraintBottom_toTopOf="@id/v_horizontal"
                        app:layout_constraintLeft_toLeftOf="@id/tv_from"
                        app:layout_constraintRight_toLeftOf="@id/swip"
                        app:layout_constraintTop_toBottomOf="@id/tv_from" />


                    <ImageButton
                        android:id="@+id/swip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:background="@drawable/btn_swip_anim"
                        android:padding="@dimen/_15sdp"
                        android:src="@drawable/ic_swap"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                    <TextView
                        android:id="@+id/tv_to"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:fontFamily="@font/poppins_medium"
                        android:text="To"
                        android:textColor="#868383"
                        android:textSize="@dimen/_12sdp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/v_horizontal" />

                    <EditText
                        android:id="@+id/etto"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:background="@android:color/transparent"
                        android:clickable="false"
                        android:cursorVisible="false"
                        android:focusable="true"
                        android:focusableInTouchMode="false"
                        android:fontFamily="@font/poppins_medium"
                        android:hint="@string/fromstation_optional"
                        android:longClickable="false"
                        android:textColor="#22242B"
                        android:textSize="@dimen/_12sdp"
                        app:layout_constraintLeft_toLeftOf="@id/tv_to"
                        app:layout_constraintRight_toLeftOf="@id/swip"
                        app:layout_constraintTop_toBottomOf="@id/tv_to" />


                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/cv_date"
                android:layout_width="@dimen/_260sdp"
                android:layout_height="wrap_content"
                android:shadowColor="#1A00001A"
                app:cardBackgroundColor="#FFFFFF"
                app:cardCornerRadius="@dimen/_15sdp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view2">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                    <TextView
                        android:id="@+id/tv_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                       android:layout_marginTop="@dimen/_10sdp"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/select_hours"
                        android:textColor="#868383"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toTopOf="@id/radioGroup"
                        android:textSize="@dimen/_12sdp" />

                    <RadioGroup
                        android:id="@+id/radioGroup"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/tv_date"
                        app:layout_constraintLeft_toLeftOf="@id/tv_date"
                        app:layout_constraintRight_toRightOf="parent"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/rb_two"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_weight="1"
                            android:buttonTint="#22242B"
                            android:checked="true"
                            android:onClick="onRadioButtonClicked"
                            android:text="@string/_2_hours"
                            android:textSize="@dimen/sp_16"
                            tools:ignore="UsingOnClickInXml" />

                        <RadioButton
                            android:id="@+id/rb_three"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_weight="1"
                            android:buttonTint="#22242B"
                            android:checked="false"
                            android:onClick="onRadioButtonClicked"
                            android:text="@string/_3_hours"
                            android:textSize="@dimen/sp_16"
                            tools:ignore="UsingOnClickInXml" />

                        <RadioButton
                            android:id="@+id/rb_four"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_weight="1"
                            android:buttonTint="#22242B"
                            android:checked="false"
                            android:onClick="onRadioButtonClicked"
                            android:text="@string/_4_hours"
                            android:textSize="@dimen/sp_16"
                            tools:ignore="UsingOnClickInXml" />


                    </RadioGroup>

                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.cardview.widget.CardView>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </RelativeLayout>

</layout>