<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        tools:context=".livestatus.LiveTrainActivity">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/rv_toolbar"
            style="@style/MyThemeOverlay_Toolbar"
            app:title="@string/live_status"
            app:titleCentered="true" />

        <RelativeLayout
            android:id="@+id/rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rv_toolbar">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_date"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:visibility="gone"
                app:cardBackgroundColor="#FFFFFF"
                app:cardCornerRadius="@dimen/_10sdp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tv_select_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="@dimen/_15sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:fontFamily="@font/poppins_medium"
                        android:text="4-8-2021"
                        android:textColor="#22242B"
                        android:textSize="@dimen/_12sdp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignTop="@id/tv_select_date"
                        android:layout_alignBottom="@id/tv_select_date"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="@dimen/_15sdp"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/ic_calendar" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_train_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cv_date"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/button_bg"
                android:fontFamily="@font/poppins_medium"
                android:padding="@dimen/_8sdp"
                android:text="@string/departed_udvada_uvd_at_19_02_delay_05_minutes"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/sp_14"
                android:visibility="gone" />

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/tv_train_info"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:fillViewport="true">


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerLiveStatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </androidx.core.widget.NestedScrollView>


        </RelativeLayout>

        <include
            android:id="@+id/in_no_tran"
            layout="@layout/no_train_avai"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/rv_toolbar"
            android:visibility="gone" />

        <ProgressBar
            android:id="@+id/progress_circular"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_centerInParent="true"
            android:indeterminateTint="@color/colorYellow"
            android:visibility="gone" />

    </RelativeLayout>

</layout>